--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,36 @@
-.body {
-  background-image: url("../images/trainStation.jpg");
+body {
+  background-image: url("../images/trainStation.jpg")
+}
+
+h1 {
+  font-family: 'Gugi', cursive
+}
+
+h3 {
+  font-family: 'Titillium Web', sans-serif;
+  font-size: 20px;
+}
+
+table {
+  font-family: 'IBM Plex Mono', monospace;
+}
+
+.panel-title {
+  font-size: 24px;
+  padding: 20px;
+  background-color: #f1f1f1;
+  color: black 
 }
 
 .jumbotron {
   color: grey;
   background-color: black;
+  margin-top: 30px
 }
 
-.h1 {
-  font-family: 'Gugi';
+.row {
+  background-color: white;
+  padding: 35px;
+  margin-bottom: 50px
 }
+
